--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-
 body {
     height: auto;
     width: auto;
@@ -46,17 +45,17 @@ nav a {
 .bg {
     /* The image used */
     background-image: url(https://www.shutterstock.com/image-vector/recruiter-workplace-doodle-concept-top-260nw-1670123863.jpg);
-  
+
     /* Full height */
-    height: 100%; 
+    height: 100%;
     width: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+}
 
-table {
+/* table {
     width: 400px;
     margin: 30px;
     border-collapse: collapse;
@@ -73,7 +72,7 @@ thead {
 th,
 td {
     padding: 15px
-}
+} */
 
 tr:hover {
     background-color: #d6c9e0;
@@ -96,4 +95,32 @@ footer b {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     position: absolute;
     right: 100px;
+}
+
+.cards {
+    display: flex;
+}
+
+.card {
+    background-color: #22A699;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 260px;
+    margin: 8px;
+}
+
+.card-element {
+    margin-bottom: 10px;
+    padding: 5px;
+    /* background-color: white; */
+}
+
+.card-image {
+    width: 100%;
+    border-radius: 40%;
+}
+
+.card-label {
+    font-size: 15px;
+    color: aliceblue;
 }
